# hey-terminal-agent

./: .gitignore  README.md  hey-agent-ideas.md  implementation.txt  install.sh  pyproject.toml
src/hey/: __init__.py  agent.py  cli.py  config.py  files.py  llm.py  prompt.py  session.py  shell.py  status.py  system_info.py
tests/: test_agent.py  test_cli.py  test_config.py  test_llm.py  test_prompt.py  test_session.py  test_shell.py  test_status.py
